hphp/hack/test/typecheck/primitive_type_arguments_mixed.php.exp
File "primitive_type_arguments_mixed.php", line 3, characters 12-16:
Type arguments are not expected for this type (Naming[2064])
