hphp/hack/test/typecheck/primitive_type_arguments_mixed.php
<?hh

function f(mixed<int> $s): void {}
